--- a/index.html
+++ b/index.html
@@ -38,31 +38,30 @@ padding: 0;
 --></style>
 <link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=2171082178893417675&amp;zx=037ae376-fc81-4d11-a645-00b5e0886a6c' media='none' onload='if(media!=&#39;all&#39;)media=&#39;all&#39;' rel='stylesheet'/><noscript><link href='https://www.blogger.com/dyn-css/authorization.css?targetBlogID=2171082178893417675&amp;zx=037ae376-fc81-4d11-a645-00b5e0886a6c' rel='stylesheet'/></noscript>
 
-<script type="text/JavaScript">
-//Script courtesy of BoogieJack.com
-var message="NoRightClicking";
-function defeatIE() {if (document.all) {(message);return false;}}
-function defeatNS(e) {if 
-(document.layers||(document.getElementById&&!document.all)) {
-if (e.which==2||e.which==3) {(message);return false;}}}
-if (document.layers) 
-{document.captureEvents(Event.MOUSEDOWN);document.onmousedown=defeatNS;}
-else{document.onmouseup=defeatNS;document.oncontextmenu=defeatIE;}
-document.oncontextmenu=new Function("return false")
-</script>
 
-<script type="text/javascript" language="javascript">
-  // Supply ads personalization default for EEA readers
-  // See https://www.blogger.com/go/adspersonalization
-  adsbygoogle = window.adsbygoogle || [];
-  if (typeof adsbygoogle.requestNonPersonalizedAds === 'undefined') {
-    adsbygoogle.requestNonPersonalizedAds = 1;
-  }
-</script>
 
 
 </head>
 <body>
+      <script type="text/JavaScript">
+document.onkeydown = function(e) {
+if(event.keyCode == 123) {
+return false;
+}
+if(e.ctrlKey && e.shiftKey && e.keyCode == ‘I’.charCodeAt(0)){
+alert(‘@copyright Yourportfolio for your curiculum vitae , resume & your portfolio’)
+return false;
+}
+if(e.ctrlKey && e.shiftKey && e.keyCode == ‘J’.charCodeAt(0)){
+alert(‘@copyright Yourportfolio for your curiculum vitae , resume & your portfolio’)
+return false;
+}
+if(e.ctrlKey && e.keyCode == ‘U’.charCodeAt(0)){
+alert(‘@copyright Yourportfolio for your curiculum vitae , resume & your portfolio’)
+return false;
+}
+}
+</script>
 <div class='main section' id='main'><div class='widget Blog' data-version='1' id='Blog1'>
 <div class='blog-posts hfeed'>
 
