--- a/index.html
+++ b/index.html
@@ -43,25 +43,8 @@ padding: 0;
 
 </head>
 <body>
-      <script type="text/JavaScript">
-document.onkeydown = function(e) {
-if(event.keyCode == 123) {
-return false;
-}
-if(e.ctrlKey && e.shiftKey && e.keyCode == ‘I’.charCodeAt(0)){
-alert(‘@copyright Yourportfolio for your curiculum vitae , resume & your portfolio’)
-return false;
-}
-if(e.ctrlKey && e.shiftKey && e.keyCode == ‘J’.charCodeAt(0)){
-alert(‘@copyright Yourportfolio for your curiculum vitae , resume & your portfolio’)
-return false;
-}
-if(e.ctrlKey && e.keyCode == ‘U’.charCodeAt(0)){
-alert(‘@copyright Yourportfolio for your curiculum vitae , resume & your portfolio’)
-return false;
-}
-}
-</script>
+     <body oncontextmenu="return false;" onkeydown="return false;" onmousedown="return false;">
+
 <div class='main section' id='main'><div class='widget Blog' data-version='1' id='Blog1'>
 <div class='blog-posts hfeed'>
 
